fix: add flex-wrap to header for more flexibility

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ html {
 .header {
     position: relative;
     display: flex;
+    flex-wrap: wrap;
     width: 100%;
 }
 
